[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/UI/Scripts/CityInfo.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Images/Background/Widgets/cityinfo_left.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Images/Background/Widgets/cityinfo_fill.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Fonts/SmallFontItalic.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/UI/Icons/Widgets/CityInfo/settlement.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Icons/Widgets/CityInfo/inhabitants.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Images/Background/Widgets/cityinfo_right.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 50.0
content_margin_right = 40.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 10, 29 )

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 10, 29 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CityInfo" type="HBoxContainer"]
margin_right = 195.0
margin_bottom = 29.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 6.0
margin_bottom = 29.0
texture = ExtResource( 2 )

[node name="SettlementName" type="Label" parent="."]
margin_left = 6.0
margin_right = 206.0
margin_bottom = 29.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 5
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "Unknown Town"
valign = 1

[node name="FactionSettlement" type="TextureRect" parent="SettlementName"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SettlementName"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -36.0
margin_right = 8.0
margin_bottom = 4.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Population" type="Label" parent="."]
margin_left = 206.0
margin_right = 244.0
margin_bottom = 29.0
size_flags_vertical = 5
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
text = "9000"
valign = 1

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 244.0
margin_right = 250.0
margin_bottom = 29.0
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
